test/sema/typeck/assign/reassign-let.out
error: `let` binding cannot be reassigned.
--> reassign-let.dora:1:20
 | fn f() { let _a=1; _a=2; }
                      ~~~~
 | 
1 error found.
