test/sema/typeck/assign/reassign-let.dora
fn f() { let _a=1; _a=2; }
